added more public endpoint